Fix dev server compatibility with configuration cache, add the ability to configure statics files and resources